--- a/auth-server/app/templates/consent.html
+++ b/auth-server/app/templates/consent.html
@@ -20,6 +20,7 @@
     </ul>
 
     <form method="post">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
         <input type="hidden" name="client_id" value="{{ client_id }}">
         <input type="hidden" name="redirect_uri" value="{{ redirect_uri }}">
         <input type="hidden" name="response_type" value="{{ response_type }}">
